--- a/src/app/appservices/appservices.component.html
+++ b/src/app/appservices/appservices.component.html
@@ -1,1 +1,25 @@
-<p>appservices works!</p>
+<div>
+    <div class="row">
+        <div class="col">
+            <h4> One On One Consulting</h4><br>
+            <h5>Make a query</h5>
+            <p>
+                Feel free to ask or to seek any queries related to the website with our Employees. We are here to help and provide the service that we can afford.
+            </p>
+        </div>
+        <div class="col">
+            <h4>Major Rural Development Projects</h4><br>
+            <h5>Schemes for Rural Development launched by Government of India</h5>
+            <p>Pradhan Mantri Gram Sadak Yojana. </p><br>
+            <p>Deen Dayal Upadhyaya Grameen Kaushalya Yojana. </p>
+            <br><p>Swarnjayanti Gram Swarozgar Yojana (SGSY)/ National Rural Livelihood Mission. </p>
+            <br><p>Prime Minister Rural Development Fellows Scheme. </p>
+            <br><p>National Rural Employment Guarantee Act (NREGA)</p>
+        </div>
+        <div class="col">
+            <h4>Project Status</h4>
+            <br><h5>Structures</h5>
+            <p>For uplifting the rural sector of our country, the Ministry of Rural Development and the Government of India in coordination with Department of Rural Development and Department of Land Resources have been carrying forward various schemes. These schemes are formulated to benefit the citizens of rural India who will eventually become the pillars of Indian Economy in the long run.</p>
+        </div>
+    </div>
+</div>
