--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,1 +1,9 @@
-<p>contactus works!</p>
+<div class="row">
+    <div class="col">
+        <h4>Office Address</h4>
+        <p>
+
+        </p>
+    </div>
+    <div class="col"></div>
+</div>
