--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,15 +3,15 @@
 <div class="footer"><br />
     <div class="footerContent">
         <div class="row" style="margin: 0;padding:0">
-            <div class="col">Services</div>
-            <div class="col">Maps</div>
-            <div class="col">Local Analysis</div>
-            <div class="col">Infrastructure and 3D Modules</div>
+            <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="services" >Services</div>
+            <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="maps" >Maps</div>
+            <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="localanalysis" >Local Analysis</div>
+            <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="infrastructure" >Infrastructure and 3D Modules</div>
             <div class="col">
-            <div style="cursor:pointer;padding:0;margin: 0;" routerLink="/homepage/donations">Donations</div><br>
-            <div style="cursor:pointer;padding:0;margin: 0;" routerLink="/homepage/workwithus">Work With Us</div><br>
-            <div style="cursor:pointer;padding:0;margin: 0;" routerLink="/homepage/feedback">Feedback</div><br>
-            <div style="cursor:pointer;padding:0;margin: 0;" routerLink="/homepage/contactus">Contact Us</div><br>
+            <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="donations">Donations</div><br>
+            <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="workwithus">Work With Us</div><br>
+            <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="feedback">Feedback</div><br>
+            <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="contactus">Contact Us</div><br>
             <i class='bx bxl-linkedin-square bx-tada bx-rotate-90' style="font-size:2rem"   ></i>
             <i class='bx bxl-facebook-circle bx-tada bx-rotate-90' style="font-size:2rem" ></i>
             <i class='bx bxl-twitter bx-tada bx-rotate-90' style="font-size:2rem"></i>
