--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,5 +1,9 @@
-<app-navbar></app-navbar>
+<div class="table-responsive" style="position: fixed;max-height:100vh ;">
+
+
+    <app-navbar></app-navbar>
 <div>
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
+</div>
