--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,7 +23,7 @@
         <span class="nav-item" routerLinkActive="active" routerLink="contactus">Contact Us</span>
         <button class="btn btn"
             style="background: linear-gradient(118deg, rgb(5, 166, 219) 5%, rgb(16, 29, 127) 95%);margin-left: 15%;color: white;font-weight: bold;"
-            routerLink="/login">LOGIN</button>
+            (click)="openModal()" >LOGIN</button>
 
         <!-- <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
@@ -39,3 +39,5 @@
 
     </div>
 </div>
+
+
