--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,9 +1,11 @@
+<!-- <div [ngStyle]="{'background-color':background }">
+    welcome<br><br>
+</div> -->
 <div class="table-responsive" style="position: fixed;max-height:100vh ;">
-
-
     <app-navbar></app-navbar>
-<div>
-    <router-outlet></router-outlet>
+    <div >
+        <router-outlet></router-outlet>
+        <app-footer></app-footer>
+    </div>
 </div>
-<app-footer></app-footer>
-</div>
+<app-navbar (bgstyle)="bgstyle()"></app-navbar>
