--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,12 +1,24 @@
-
-    <div class="modal-header">
+<div style="width: 100%;height:100%;display: flex;justify-content: center;">
+    <!-- <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
         <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
+    </div> -->
+    <div class="modal-body">
+        <form><br>
+            <label><strong>LOGIN ID<sup style="color:crimson"><strong>*</strong></sup></strong></label>
+            <input class="form-control shadow-none" placeholder="Enter Login Id" formControlName=""><br>
+            <label><strong>PASSWORD<sup style="color:crimson"><strong>*</strong></sup></strong></label>
+            <input class="form-control shadow-none" placeholder="Enter Password" formControlName=""><br>
+            <div style="display: flex;justify-content:center;align-items:center">
+                <button class="btn btn" type="submit"
+                    style="background-color: rgba(1, 9, 71, 1);color: white;padding: 0.6rem 2rem; font-weight: bold;">Login</button>
+            </div>
+        </form>
     </div>
-    <div class="modal-body">...</div>
-    <div class="modal-footer">
+    <!-- <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
             Close
         </button>
         <button type="button" class="btn btn-primary">Save changes</button>
-    </div>
+    </div> -->
+</div>
