--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -1,1 +1,1 @@
-<p>maps works!</p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7754.9441415059755!2d78.47864557410105!3d13.629023561707868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb267e5e81449a3%3A0x22d91aa91367269d!2sAngallu%2C%20Andhra%20Pradesh!5e0!3m2!1sen!2sin!4v1660666372254!5m2!1sen!2sin" width="1600" height="460" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
