--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,9 +1,26 @@
-<div class="row">
+<div style="text-align: center;padding: 1rem;"><h3><b>CONTACT US</b></h3></div>
+<div class="row" style="margin: 2rem;margin-top: 0%;">
     <div class="col">
-        <h4>Office Address</h4>
-        <p>
-
-        </p>
+        <h2>Office Address</h2><hr>
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col">
+                3094-13th Cross, <br>
+                Administrative Building,<br>
+                Anant Kanekar Marg, Bandra (E),<br>
+                Mumbai 400051. India.<br>
+            </div>
+        </div><br><br>
+        <div class="row">
+            <div class="col">
+                <div style="margin: 0.5rem;margin-top: 0;"><i class='bx bxs-phone bx-tada' style="font-size: 1.2rem;"></i>&nbsp;<b>Phone :</b> 022-26565800<br></div>
+                <div style="margin: 0.5rem;"><i class='bx bxs-package bx-tada' style="font-size: 1.2rem;"></i>&nbsp;<b> Fax &nbsp;&nbsp;&nbsp;&nbsp;:</b>  022-26590457<br></div>
+                <div style="margin: 0.5rem;"><i class='bx bx-envelope bx-tada' style="font-size: 1.2rem;"></i>&nbsp;<b>Email &nbsp;:</b> info@sra.gov.in</div>
+            </div>
+        </div>
     </div>
-    <div class="col"></div>
+    <div class="col" style="display: flex;justify-content:center;align-items:center">
+        <i class='bx bx-right-arrow-circle bx-fade-right' style="font-size: 15rem;"></i>
+        <b style="font-size:3rem;margin-left: 2rem;cursor: pointer;" (click)="contact()" >Contact Through Your Valuable Feedback.</b>
+    </div>
 </div>
