--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,5 +1,5 @@
 
-<div  #top id="top" class="row" style="height: 100vh;margin:0rem;padding:0rem">
+<div  #top id="top" class="row" style="height: 77vh;margin:0rem;padding:0rem">
     <div class="col-6" style="background-color: rgba(1, 9, 71, 1);color: white;padding-left: 9vw;padding-top: 25vh;">
         <div>
             <h1>Feedback .</h1>
@@ -25,6 +25,14 @@
                     <label>Email <sup style="color:crimson"><strong></strong></sup></label><br>
                     <input (click)="showerr=false" class="form-control shadow-none" placeholder="Enter  Email" type="email"
                         formControlName="email">
+                    <!-- <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span> -->
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-6">
+                    <label>Contact Number<sup style="color:crimson"><strong></strong></sup></label><br>
+                    <input (click)="showerr=false" class="form-control shadow-none" placeholder="Enter Your Contact Number" 
+                        formControlName="contact" type="number">
                     <!-- <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span> -->
                 </div>
             </div>
