--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,7 +1,6 @@
-<img class="shadow" [src]='imageSource' style="width:100% ;height:50vh" />
+<img id="top" class="shadow" [src]='imageSource' style="width:100% ;height:50vh" />
 
 <div>
-
     <div class="row" style="background-color: #060B4B;margin: 0;padding: 3rem;color: white;">
         <div class="col"><br />
             <p style="line-height: 35px;"><strong style="font-size:1.7rem;color: white;font-family: 'Poppins';">HAPPY
