--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,11 +1,11 @@
 <!-- <div [ngStyle]="{'background-color':background }">
     welcome<br><br>
 </div> -->
-<div class="table-responsive" style="position: fixed;max-height:100vh ;">
+<div>
     <app-navbar></app-navbar>
-    <div >
+    <div  class="table-responsive" style="position: fixed;max-height:80vh ; width: 100vw;">
         <router-outlet></router-outlet>
         <app-footer></app-footer>
     </div>
 </div>
-<app-navbar (bgstyle)="bgstyle()"></app-navbar>
+<!-- <app-navbar (bgstyle)="bgstyle()"></app-navbar> -->
