--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div style="width: 100%;height:100%;display: flex;justify-content: center;">
+<div id="top" style="width: 100%;height:100%;display: flex;justify-content: center;">
     <!-- <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
         <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
