--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,24 +1,24 @@
 <div id="top" style="width: 100%;height:100%;display: flex;justify-content: center;">
-    <!-- <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
-    </div> -->
     <div class="modal-body">
-        <form><br>
+        <form [formGroup]="logindetails" (ngSubmit)="login()"><br>
             <label><strong>LOGIN ID<sup style="color:crimson"><strong>*</strong></sup></strong></label>
-            <input class="form-control shadow-none" placeholder="Enter Login Id" formControlName=""><br>
+            <input class="form-control shadow-none" placeholder="Enter Login Id" formControlName="userid"><br>
+                <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span>
             <label><strong>PASSWORD<sup style="color:crimson"><strong>*</strong></sup></strong></label>
-            <input class="form-control shadow-none" placeholder="Enter Password" formControlName=""><br>
+            <input class="form-control shadow-none" placeholder="Enter Password" formControlName="password"><br>
+                <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span>
             <div style="display: flex;justify-content:center;align-items:center">
                 <button class="btn btn" type="submit"
                     style="background-color: rgba(1, 9, 71, 1);color: white;padding: 0.6rem 2rem; font-weight: bold;">Login</button>
             </div>
         </form>
     </div>
-    <!-- <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
-            Close
-        </button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-    </div> -->
+    <div *ngIf="displaypopup" [ngClass]="{'view':displaypopup}">
+        <span style="font-size: 1rem;">
+            <strong><span style="font-size: 1.2rem;" ><i class='bx bx-error'></i></span>{{popup}}
+                <div class="btn"><i style="color:white;font-size:2rem" class="bx bxs-check-circle"></i>
+                </div>
+            </strong>
+        </span>
+    </div>
 </div>
