--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,32 +11,10 @@
         </span>
     </div>
     <div class="backgroundColor">
-        <span class="nav-item" routerLinkActive="active" routerLink="homepage">Home</span>
-        <span class="nav-item" routerLinkActive="active" routerLink="services">Services</span>
-        <span class="nav-item" routerLinkActive="active" routerLink="maps">Maps</span>
-        <!-- <span class="nav-item" routerLinkActive="active" routerLink="maps">Team</span> -->
-        <span class="nav-item" routerLinkActive="active" routerLink="localanalysis">Local Analysis</span>
-        <span class="nav-item" routerLinkActive="active" routerLink="infrastructure">Infrastructure and 3D Module</span>
-        <span class="nav-item" routerLinkActive="active" routerLink="workwithus">Work with us</span>
-        <span class="nav-item" routerLinkActive="active" routerLink="donations">Donate</span>
-        <span class="nav-item" routerLinkActive="active" routerLink="feedback">Feedback</span>
-        <span class="nav-item" routerLinkActive="active" routerLink="contactus">Contact Us</span>
-        <button class="btn btn"
+        <span  *ngFor="let x of routes" class="nav-item" routerLinkActive="active" routerLink={{x.route}}>{{x.routename}}</span>
+        <button class="btn btn" *ngIf = "role==''"
             style="background: linear-gradient(118deg, rgb(5, 166, 219) 5%, rgb(16, 29, 127) 95%);margin-left: 15%;color: white;font-weight: bold;"
             (click)="openModal()" >LOGIN</button>
-
-        <!-- <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown button
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-        </div> -->
-
     </div>
 </div>
 
