--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,25 +2,48 @@
 
 <div class="footer"><br />
     <div class="footerContent">
-        <div class="row" style="margin: 0;padding:0">
-            <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="services" >Services</div>
-            <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="maps" >Maps</div>
-            <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="localanalysis" >Local Analysis</div>
-            <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="infrastructure" >Infrastructure and 3D Modules</div>
-            <div class="col">
-            <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="donations">Donations</div><br>
-            <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="workwithus">Work With Us</div><br>
-            <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="feedback">Feedback</div><br>
-            <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="contactus">Contact Us</div><br>
-            <i class='bx bxl-linkedin-square bx-tada bx-rotate-90' style="font-size:2rem"   ></i>
-            <i class='bx bxl-facebook-circle bx-tada bx-rotate-90' style="font-size:2rem" ></i>
-            <i class='bx bxl-twitter bx-tada bx-rotate-90' style="font-size:2rem"></i>
-            </div>
-        </div><br>
-
+        <div *ngIf="admin==0">
+            <div class="row" style="margin: 0;padding:0">
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="services" >Services</div>
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="maps" >Maps</div>
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="localanalysis" >Local Analysis</div>
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="infrastructure" >Infrastructure and 3D Modules</div>
+                <div class="col">
+                <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="donations">Donations</div><br>
+                <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="workwithus">Work With Us</div><br>
+                <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="feedback">Feedback</div><br>
+                <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="contactus">Contact Us</div><br>
+                <i class='bx bxl-linkedin-square bx-tada bx-rotate-90' style="font-size:2rem"   ></i>
+                <i class='bx bxl-facebook-circle bx-tada bx-rotate-90' style="font-size:2rem" ></i>
+                <i class='bx bxl-twitter bx-tada bx-rotate-90' style="font-size:2rem"></i>
+                </div>
+            </div><br>
+            
         <div style="text-align: center;">
             <span>Copyright © 2022 Slum Control Autority of India All Rights Reserved</span>
         </div>
+        </div>
+        <div *ngIf="admin==1">
+            <div class="row" style="margin: 0;padding:0">
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="donations" >Donations</div>
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="feedbacks" >Feedback</div>
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="contracts" >Contracts</div>
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="jobapplications" >Job Applications</div>
+                <div class="col"  style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="contactus" >Contact Us</div>
+                
+                <div class="col">
+                <!-- <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="donations">Donations</div><br>
+                <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="workwithus">Work With Us</div><br>
+                <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="feedback">Feedback</div><br>
+                <div style="cursor:pointer;padding:0;margin: 0;" routerLinkActive="active" routerLink="contactus">Contact Us</div><br> -->
+                Social Media<br/><br/>
+                <i class='bx bxl-linkedin-square bx-tada bx-rotate-90' style="font-size:2rem"   ></i>
+                <i class='bx bxl-facebook-circle bx-tada bx-rotate-90' style="font-size:2rem" ></i>
+                <i class='bx bxl-twitter bx-tada bx-rotate-90' style="font-size:2rem"></i>
+                </div>
+            </div><br>
+        </div>
+
     </div>
 </div>
 
