--- a/src/app/adminfolder/adminfeedback/adminfeedback.component.html
+++ b/src/app/adminfolder/adminfeedback/adminfeedback.component.html
@@ -1,1 +1,13 @@
-<p>adminfeedback works!</p>
+<div style="display: flex;justify-content:center;max-height: 100vh;font-size: 0.9rem;">
+    <div class="row m-5 mt-0" st>
+        <div class="col-2 shadow card m-5 mb-0  border-0" style="background-color: whiteSmoke;padding: 1rem; "
+            *ngFor="let c of data">
+            <h5>{{c.fullname | uppercase}}</h5>
+            <span>{{c.email}}</span>
+            <strong>Suggestions</strong>
+            <span>{{c.suggestions}}</span>
+            <strong>Feedback</strong>
+            <span>{{c.feedbackmsg}}</span>
+    
+        </div>
+    </div></div>
