--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,10 +13,10 @@
     <div class="backgroundColor">
         <span  *ngFor="let x of routes" class="nav-item" routerLinkActive="active" routerLink={{x.route}}>{{x.routename}}</span>
         <button class="btn btn" *ngIf = "!role"
-            style="background: linear-gradient(118deg, rgb(5, 166, 219) 5%, rgb(16, 29, 127) 95%);margin-left: 10%;color: white;font-weight: bold;"
+            style="background: linear-gradient(118deg, rgb(5, 166, 219) 5%, rgb(16, 29, 127) 95%);color: white;font-weight: bold;float: right;"
             (click)="openModal()" >LOGIN</button>
         <button class="btn btn" *ngIf = "role"
-            style="background: linear-gradient(118deg,  rgb(5, 166, 219) 5%, rgb(16, 29, 127) 95%);margin-left: 10%;color: white;font-weight: bold;"
+            style="background: linear-gradient(118deg,  rgb(5, 166, 219) 5%, rgb(16, 29, 127) 95%);color: white;font-weight: bold;float: right;"
             (click)="logout()" >LogOut</button>
     </div>
 </div>
