--- a/src/app/appservices/appservices.component.html
+++ b/src/app/appservices/appservices.component.html
@@ -1,25 +1,74 @@
-<div id="top">
-    <div class="row">
-        <div class="col">
-            <h4> One On One Consulting</h4><br>
-            <h5>Make a query</h5>
-            <p>
-                Feel free to ask or to seek any queries related to the website with our Employees. We are here to help and provide the service that we can afford.
-            </p>
-        </div>
-        <div class="col">
-            <h4>Major Rural Development Projects</h4><br>
-            <h5>Schemes for Rural Development launched by Government of India</h5>
-            <p>Pradhan Mantri Gram Sadak Yojana. </p><br>
-            <p>Deen Dayal Upadhyaya Grameen Kaushalya Yojana. </p>
-            <br><p>Swarnjayanti Gram Swarozgar Yojana (SGSY)/ National Rural Livelihood Mission. </p>
-            <br><p>Prime Minister Rural Development Fellows Scheme. </p>
-            <br><p>National Rural Employment Guarantee Act (NREGA)</p>
-        </div>
-        <div class="col">
-            <h4>Project Status</h4>
-            <br><h5>Structures</h5>
-            <p>For uplifting the rural sector of our country, the Ministry of Rural Development and the Government of India in coordination with Department of Rural Development and Department of Land Resources have been carrying forward various schemes. These schemes are formulated to benefit the citizens of rural India who will eventually become the pillars of Indian Economy in the long run.</p>
-        </div>
-    </div>
+<div id="top" class="m-4">
+    <h4>
+        IDENTIFICATION OF SLUMS</h4>
+
+    <p class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+        Slums are identified using geographic information system (GIS) which is a conceptualized framework that
+        provides the ability to capture and analyze spatial and geographic data. With the varying intensity of
+        the image captured the change in the population or area occupied by the slum is calculated. Street view
+        also enabled to have better visualization of slum along with living conditions.
+
+    </p>
+
+    <h4>
+        AREA ANALYSIS</h4>
+
+    <p  class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
+        Area analysis is an amalgamation of a list containing geographical features of a particular area, soil type,
+        projects
+        being and already implemented in that area and constructions that are supported in that region based on soil
+        testing.
+
+    </p>
 </div>
+
+
+
+
+
+
+
+CATEGORIZED MAPS:
+
+Categorized maps are the domain where the slums can be identified based on Population density or Area Occupied by the
+slum.
+
+Population density-based map:
+
+POPULATION DENSITY MAPS are typically derived from census data and aggregated into arbitrary areal units such as census
+tracts, block groups, or at best census blocks. The major assumption with this representation is that within the
+boundary of the areal unit the population density is homogeneous. While in dense urban areas comprised of small areal
+units this assumption may be relatively accurate, population densities in larger census block groups outside of the
+urban center often differ significantly within the block group boundary. This technique can be improved by using
+ancillary data sources such as topographic maps, satellite imagery, and land cover datasets to estimate the true
+population distribution. Dasymetric mapping can be used to categorize geography into inhabitable and uninhabitable
+regions based on predefined density values for different settlement patterns.
+
+Area Categorization:
+
+Both antiquated and new slums will be categorized and listed based on the area they are occupying.
+
+SAMPLE 2D AND 3D DIAGRAMS:
+
+2D and 3D designs are provided here in this section based on the Terrion, soil type and no of residents which or
+preferably economic and also which can be maintained at low cost with maximum safety.
+
+EMPLOYMENT OPPORTUNITIES:
+
+Work with us:
+
+Slum citizens can find jobs according to their own skill sets with an optimal salary from their own place's which will
+be posted on this website.
+
+Work for us:
+
+All the employment opportunities available in the region will be posted by various owners on the employment platform on
+which the job seekers can avail the position or role by submitting the necessary requirements.
+
+DONATIONS:
+
+-Donators can send money via online payment.
+
+-NGOs that are working for the development of slums will be listed here
+
+-All the work and progress carried out with the help of donations will be listed here
