--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -5,7 +5,7 @@
             <input class="form-control shadow-none" placeholder="Enter Login Id" formControlName="userid">
                 <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span><br>
             <label><strong>PASSWORD<sup style="color:crimson"><strong>*</strong></sup></strong></label>
-            <input class="form-control shadow-none" placeholder="Enter Password" formControlName="password">
+            <input class="form-control shadow-none" placeholder="Enter Password" type="password" formControlName="password">
                 <span *ngIf="showerr" style="color:crimson;font-size: 0.8rem;">Enter valid text</span><br>
             <div style="display: flex;justify-content:center;align-items:center">
                 <button class="btn btn" type="submit"
