--- a/src/app/adminfolder/contracts/contracts.component.html
+++ b/src/app/adminfolder/contracts/contracts.component.html
@@ -1,1 +1,3 @@
-<p>contracts works!</p>
+<div  style="height: 70vh;display: flex;text-align: center;justify-content: center;align-items: center;">
+    <h1><b>contracts works!</b></h1>
+</div>
